# search-anything

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  search.ipynb  search.py
rag/: __init__.py  config.py  indexing.py  ingestion.py  pipeline.py  retrieval.py  synthesis.py
rag/backends/aws/: registry.py
rag/backends/local/: llm.py  registry.py  vectorstore.py
rag/chunkers/: docling_chunker.py
rag/core/: interfaces.py  models.py  schemas.py
rag/parsers/: docling_parser.py  liteparse_parser.py  router.py
rag/stages/: chunking.py  parsing.py  toc.py
rag/steps/: chunking.py
src/rag/: api.py  cli.py  config.py  indexing.py  query.py  retrieval.py  synthesis.py
src/rag/backends/: factory.py
src/rag/backends/aws/: batch.py  llm.py  registry.py  vectorstore.py
src/rag/backends/local/: llm.py  registry.py  vectorstore.py
src/rag/chunkers/: docling_chunker.py  liteparse_chunker.py
src/rag/core/: interfaces.py  schemas.py
src/rag/indexing/: pipeline.py  store.py
src/rag/inference/: retrieval.py  synthesis.py
src/rag/ingestion/: chunking.py  parsing.py  pipeline.py  summarize.py
src/rag/ingestion/chunkers/: docling_chunker.py  liteparse_chunker.py
src/rag/ingestion/parsers/: docling_parser.py  liteparse_parser.py  plaintext_parser.py
src/rag/parsers/: docling_parser.py  heading_hierarchy.py  liteparse_parser.py
src/rag/steps/: chunking.py  parsing.py  summarize.py
