[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search-anything"
version = "0.1.0"
description = "Production-ready ML book RAG pipeline with switchable local/AWS backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ── Parsing & chunking ──
    "docling",
    "liteparse",                # alternative local parser (native Rust core, built-in OCR)
    "easyocr",                  # OCR engine for docling (scanned/mixed PDFs)
    # ── Embedding & vector store (local) ──
    "langchain-core",           # Document container at the Milvus boundary
    "langchain-huggingface",
    "langchain-milvus",
    "pymilvus",
    "sentence-transformers",
    "torch",
    # ── LLM (local) ──
    "anthropic",
    # ── Misc ──
    "pandas",
    "python-dotenv",
    "watchdog",
]

[project.optional-dependencies]
# AWS backend (CLOUD_BACKEND=aws): S3 + DynamoDB + Bedrock
aws = [
    "boto3",
]

[project.scripts]
search-anything = "rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-dir]
"" = "src"
