[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search-anything"
version = "0.1.0"
description = "Production-ready RAG pipeline with switchable methods and backends, designed for local and cloud deployment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # parsing/chunking
    "docling",
    "liteparse",
    "easyocr",

    # embedding/vectordb
    "langchain-core",
    "langchain-huggingface",
    "langchain-milvus",
    "pymilvus",
    "sentence-transformers",
    "torch",
    
    # llm
    "anthropic",

    # data/io/obs
    "pandas",
    "python-dotenv",
    "watchdog",
]

[project.optional-dependencies]
# AWS backend (CLOUD_BACKEND=aws): S3 + DynamoDB + Bedrock
aws = [
    "boto3",
]

[project.scripts]
search-anything = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-dir]
rag = "src/rag"
